@@ -19,9 +19,17 @@
 <FONT SIZE="5"><STRONG>Available Localizations</STRONG></FONT>
 <BR><BR>
 
+<STRONG>Japanese package for 0.9.2</STRONG> 11/7/2006<BR>
+Download Link: <a href="localizations/Japanese-0.9.2.mpkg.zip">here</a><br><br>
+<BR><BR>
+
 <STRONG>Simplified Chinese (简体中文) for 0.9.2</STRONG> 10/31/2006<BR>
 Download Link: <a href="localizations/zh_CN-0.9.2.mpkg.zip">here</a><br><br>
 <BR><BR>
+
+<STRONG>Traditional Chinese (繁體中文) for 0.9.0</STRONG> 10/12/2006<BR>
+Download Link: <a href="localizations/iTerm_TC_0.9.0.dmg">here</a><br><br>
+Contributed by: <a href="mailto:shivahuang at gmail dot com no spam">Shiva Huang</a><br><BR><BR>
 
 <STRONG>Simplified Chinese (简体中文) for 0.9.0</STRONG> 10/12/2006<BR>
 Download Link: <a href="localizations/zh_CN-0.9.0.zip">here</a><br><br>
